--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,41 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card-product {
+  width: 25vw;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 1px 1px 5px #ccc;
+  margin: 1rem;
   padding: 2rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.card-product img {
+  max-height: 200px;
+  max-width: 200px;
+  align-self: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.detail-product-container {
+  display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.image-product-container {
+  margin-right: 1rem;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.card {
-  padding: 2em;
+.image-product-container img {
+  width: 200px;
 }
 
-.read-the-docs {
-  color: #888;
+.detail-product-description {
+  margin-left: 1rem;
 }
